# rag_project_climate

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: Git bash rag_project_climate  HuggingFace  Pour aller plus loin dans ce projet
notebooks/: 1.0-np-RagClimate.ipynb
